cluster/apps/traefik/traefik-ingress/traefik-dashboard/traefik-dash-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.${SECRET_CLUSTER_DOMAIN}`)
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
    - name: middleware-chain-cf-auth
      namespace: traefik
  tls:
    secretName: "${SECRET_CLUSTER_DOMAIN/./-}-tls-secret"
